<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>my.cute.bot</groupId>
	<artifactId>cutebot2</artifactId>
	<version>0.1.8</version>
	<name>cutebot</name>
	<description>cutebot</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
	</properties>

	<repositories>
		<repository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>jcenter</id>
			<name>jcenter-bintray</name>
			<url>https://jcenter.bintray.com</url>
		</repository>
		<repository>
			<id>dv8tion</id>
			<name>m2-dv8tion</name>
			<url>https://m2.dv8tion.net/releases</url>
		</repository>
		<repository>
			<id>jitpack</id>
			<url>https://jitpack.io</url>
		</repository>
		<repository>
			<id>arbjergDev-releases</id>
			<name>Lavalink Repository</name>
			<url>https://maven.lavalink.dev/releases</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>net.dv8tion</groupId>
			<artifactId>JDA</artifactId>
			<version>5.2.3</version>
		</dependency>
		<dependency>
			<groupId>my.cute.markov</groupId>
			<artifactId>markov2</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>dev.arbjerg</groupId>
			<artifactId>lavaplayer</artifactId>
			<version>2.2.2</version>
		</dependency>
		<dependency>
			<groupId>dev.lavalink.youtube</groupId>
			<artifactId>v2</artifactId>
			<version>1.11.3</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.2</version>
				<configuration>
					<argLine>--add-opens=java.base/java.lang=ALL-UNNAMED
						--add-opens=java.base/java.math=ALL-UNNAMED
						--add-opens=java.base/java.util=ALL-UNNAMED
						--add-opens=java.base/java.util.concurrent=ALL-UNNAMED
						--add-opens=java.base/java.net=ALL-UNNAMED
						--add-opens=java.base/java.text=ALL-UNNAMED
						--add-opens=java.sql/java.sql=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<manifestEntries>
										<Main-Class>my.cute.bot.CutebotTask</Main-Class>
									</manifestEntries>
								</transformer>
							</transformers>
						</configuration>
					</execution>

				</executions>
				<configuration>
					<finalName>uber-${project.artifactId}-${project.version}</finalName>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>